--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Grayscale
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Kristian Brevik
+email: kristianbrevik@gmail.com
+url: https://kbrevs.github.io
+description: "Transposable Elements, Epigenetics, Genomes... Science!"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -15,15 +15,15 @@ footer: Your Website
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/KristianBrevik
   - title: facebook
     url:
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: 
   - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: 
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/kbrevs
 
 # Build settings
 markdown: kramdown
